--- a/package.json
+++ b/package.json
@@ -1,51 +1,33 @@
 {
-  "name": "gatsby-starter-vadyan",
-  "version": "1.1.0",
+  "name": "fm-testimonials-grid-section",
+  "version": "0.1.0",
   "license": "MIT",
   "author": "p1t1ch <belobeev.kirill@gmail.com>",
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "start": "gatsby serve -H 0.0.0.0 -p 8000",
-    "copy-static-queries": "cp -r ./public/page-data/sq/d ./public/static",
-    "storybook": "yarn copy-static-queries && start-storybook -s public -p 8080 --ci",
-    "storybook:build": "yarn copy-static-queries && build-storybook -s public -o docs",
-    "storybook:start": "serve docs -l 8080",
-    "test": "is-ci test:coverage test:watch",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "test:e2e": "is-ci test:e2e:run test:e2e:open",
-    "pretest:e2e:run": "yarn build",
-    "test:e2e:run": "server-test 8000 cy:run",
-    "test:e2e:open": "start-server-and-test dev 8000 cy:open",
-    "coverage": "open ./coverage/lcov-report/index.html",
-    "stats": "open ./public/report.html",
     "lint": "eslint . --ext .tsx,.ts,.mdx,.js --fix",
-    "prettier": "prettier --write",
     "format": "prettier . --write --ignore-path .gitignore",
     "type-check": "tsc --noEmit",
-    "validate": "yarn lint && yarn format && yarn type-check && yarn test:coverage && yarn test:e2e:run",
-    "clean": "gatsby clean"
+    "validate": "npm run lint && npm run format && npm run type-check",
+    "clean": "gatsby clean",
+    "stats": "open ./public/report.html"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && yarn type-check"
+      "pre-commit": "lint-staged && npm run type-check"
     }
   },
   "lint-staged": {
     "*.{tsx,ts,mdx,js}": [
-      "yarn lint",
-      "yarn format"
+      "npm run lint",
+      "npm run format"
     ]
   },
   "eslintIgnore": [
     "node_modules",
-    "public",
-    "docs",
-    "coverage",
-    "!.storybook"
+    "public"
   ],
   "browserslist": [
     "last 2 Chrome major versions",
@@ -56,72 +38,48 @@
     "last 2 iOS major versions"
   ],
   "dependencies": {
-    "@apollo/client": "^3.2.3",
-    "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "@svgr/webpack": "^5.4.0",
-    "cross-fetch": "^3.0.6",
-    "emotion-theming": "^10.0.27",
+    "@svgr/webpack": "^5.5.0",
+    "autoprefixer": "^10.2.1",
     "focus-visible": "^5.2.0",
-    "gatsby": "^2.24.75",
-    "gatsby-alias-imports": "^1.0.4",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-emotion": "^4.3.13",
-    "gatsby-plugin-manifest": "^2.4.34",
-    "gatsby-plugin-offline": "^3.2.31",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.42",
-    "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13",
-    "gatsby-source-filesystem": "^2.3.34",
-    "gatsby-transformer-sharp": "^2.5.17",
-    "polished": "^4.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "gatsby": "^2.30.3",
+    "gatsby-alias-imports": "^1.0.6",
+    "gatsby-image": "^2.9.0",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-postcss": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-plugin-svgr": "^2.1.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.18",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
+    "postcss": "^8.2.4",
+    "postcss-focus-visible": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-a11y": "^6.0.26",
-    "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/react": "^6.0.26",
-    "@testing-library/cypress": "^7.0.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
-    "@types/jest": "^26.0.14",
-    "@types/react": "^16.9.52",
-    "@types/react-dom": "^16.9.8",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
-    "@types/testing-library__jest-dom": "^5.9.4",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "babel-jest": "^26.5.2",
-    "babel-preset-gatsby": "^0.5.14",
-    "cypress": "^5.3.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "babel-preset-gatsby": "^0.10.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jest-dom": "^3.2.3",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-mdx": "^1.8.2",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "eslint-plugin-testing-library": "^3.9.1",
-    "husky": "^4.3.0",
-    "is-ci-cli": "2.1.2",
-    "jest": "^26.5.3",
-    "jest-emotion": "^10.0.32",
-    "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "serve": "^11.3.2",
-    "start-server-and-test": "^1.11.5",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.3"
   },
   "engines": {
     "node": ">= 10.14.2"
