--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "last 2 iOS major versions"
   ],
   "dependencies": {
+    "@fontsource/barlow-semi-condensed": "^4.1.0",
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.2.1",
     "focus-visible": "^5.2.0",
